--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  color: white;
 }
 
 .logo {
@@ -62,6 +63,13 @@ input {
   flex-wrap: wrap;
   width: 90%;
   margin-top: 20px;
+    width: 60%;
+  border: 1px solid white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
 }
 
 .bookCard {
@@ -76,7 +84,6 @@ input {
   background-color: rgb(155, 155, 155);
   color: black;
 }
-
 @media (prefers-reduced-motion: no-preference) {
   a:nth-of-type(2) .logo {
     animation: logo-spin infinite 20s linear;
